<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_color">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/bg_container"
        android:layout_margin="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintVertical_bias="0.56">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.End"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.End"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.End"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.Main"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/PlayButton.End"
                tools:text="0"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.cardview.widget.CardView
        android:id="@+id/restart"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/mainView"
        app:layout_constraintEnd_toEndOf="@id/mainView"
        app:cardBackgroundColor="@color/degree2"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_restart_x"
            android:padding="8dp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ic_back"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/mainView"
        app:layout_constraintEnd_toStartOf="@id/restart"
        app:cardBackgroundColor="@color/degree2"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/back_square_svgrepo_com"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ic_home"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/mainView"
        app:layout_constraintStart_toStartOf="@id/mainView"
        app:cardBackgroundColor="@color/degree2"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home"
            android:padding="12dp"
            />

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/_2048"
        app:layout_constraintStart_toStartOf="@id/mainView"
        app:layout_constraintTop_toTopOf="@id/c_score"
        app:layout_constraintBottom_toBottomOf="@id/c_score"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito"
        app:layout_constraintEnd_toStartOf="@id/c_score"
        app:layout_constraintHorizontal_bias="0"
        android:textSize="48sp"
        android:layout_marginBottom="12dp"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/c_high_score"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="@id/mainView"
        app:layout_constraintBottom_toTopOf="@id/restart"
        android:layout_marginVertical="12dp"
        android:background="@drawable/bg_container"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="@id/c_high_score"
            app:layout_constraintStart_toStartOf="@id/c_high_score"
            app:layout_constraintEnd_toEndOf="@id/c_high_score"
            android:text="@string/high_score"
            android:textColor="#B3FFFFFF"
            android:textSize="12sp"
            android:focusable="true"
            android:gravity="center"
            android:fontFamily="@font/nunito"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            />


        <TextView
            android:id="@+id/tv_high_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:layout_constraintTop_toTopOf="@id/c_high_score"
            app:layout_constraintStart_toStartOf="@id/c_high_score"
            app:layout_constraintEnd_toEndOf="@id/c_high_score"
            android:text="0"
            android:textColor="@color/white"
            android:focusable="true"
            android:gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/nunito"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/c_score"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        app:layout_constraintEnd_toStartOf="@id/c_high_score"
        app:layout_constraintBottom_toTopOf="@id/restart"
        android:layout_marginVertical="12dp"
        android:background="@drawable/bg_container"
        android:orientation="vertical"
        android:padding="4dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="@id/c_high_score"
            app:layout_constraintStart_toStartOf="@id/c_high_score"
            app:layout_constraintEnd_toEndOf="@id/c_high_score"
            android:text="@string/score"
            android:textColor="#B3FFFFFF"
            android:textSize="12sp"
            android:focusable="true"
            android:gravity="center"
            android:fontFamily="@font/nunito"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            />


        <TextView
            android:id="@+id/tv_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:layout_constraintTop_toTopOf="@id/c_high_score"
            app:layout_constraintStart_toStartOf="@id/c_high_score"
            app:layout_constraintEnd_toEndOf="@id/c_high_score"
            android:text="0"
            android:textColor="@color/white"
            android:focusable="true"
            android:gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/nunito"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>